--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.17.0",
     "recoil": "^0.7.7",
     "tailwindcss": "^3.3.3",
