--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.31",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
