--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.16",
+    "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.31",
+    "react-chartjs-2": "^5.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
